fixed vertical-piano z-index error

--- a/piano.css
+++ b/piano.css
@@ -197,7 +197,7 @@ a:hover {
   left: 117px;
   /* left: 5.2%; */
   transform: translateX(-50%); 
-  z-index: +5;
+  /* z-index: +5; */
   
   /* DR */
 
